kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wanderlust
  labels:
    app: wanderlust-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wanderlust-backend
  template:
    metadata:
      labels:
        app: wanderlust-backend
    spec:
      containers:
        - name: backend
          image: roshanx/wanderlust-backend:v1 # Replace with your registry image
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
