kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: wanderlust
  labels:
    app: wanderlust-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wanderlust-frontend
  template:
    metadata:
      labels:
        app: wanderlust-frontend
    spec:
      containers:
        - name: frontend
          image: roshanx/wanderlust-frontend:v1 # Replace with your registry image
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
