kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: wanderlust-backend
spec:
  type: ClusterIP
  selector:
    app: wanderlust-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
