kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: wanderlust-frontend
  namespace: wanderlust
spec:
  type: NodePort
  selector:
    app: wanderlust-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 8000
