kubernetes/nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # You can change this (30000-32767)
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
