kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: wanderlust
  labels:
    app: wanderlust-redis
spec:
  type: ClusterIP
  selector:
    app: wanderlust-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
